[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
diesel = { version = "2.1.4", features = ["mysql", "r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
